# CP_ATOM_HACK_2024

./: .gitignore  FULL_LAUNCH.ipynb  README.md  main.py  pyproject.toml  submission.csv
case_data/train Атом/: README.docx  Метрика_Атом.ipynb  Приложение.docx
case_data/train Атом/train data/: train_data_markup.xlsx
src/: core.py  model.py  scheme.py  timer.py  utils.py
